--- a/index.html
+++ b/index.html
@@ -305,6 +305,14 @@
 
                 <li>
                     <div class="timeline-content">
+                        <h3 class="date">10. Máj 2022</h3>
+                        <h1>Nový začiatok</h1>
+                        <img src="img/novyZaciatok.jpg">
+                    </div>
+                </li>
+
+                <li>
+                    <div class="timeline-content">
                         <h3 class="date">11. Máj 2022</h3>
                         <h1>Piknik s Kasy</h1>
                         <img src="img/kasy.jpg">
@@ -492,6 +500,21 @@
                     </div>
                 </li>
 
+                <li>
+                    <div class="timeline-content">
+                        <h3 class="date">19. September 2022</h3>
+                        <h1>Zuzka si našla nové zlatíčko 😉</h1>
+                        <img src="img/zlaticko.jpeg">
+                    </div>
+                </li>
+
+                <li>
+                    <div class="timeline-content">
+                        <h3 class="date">23. September 2022</h3>
+                        <h1>Prekrásna Terchová</h1>
+                        <img src="img/terchova.jpg">
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
